--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Surface Designer</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+  <img src="images/logo.png" alt="Heleen Vermeulen Creations Logo" width="150">
+</header>
 <body>
     <header>
         <h1>Heleen Vermeulen</h1>
