--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surface Designer</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        header {
+            text-align: center;
+            padding: 20px;
+        }
+        header img {
+            display: block;
+            margin: 0 auto 10px auto; /* centers logo with spacing below */
+            width: 150px; /* adjust as needed */
+        }
+        nav a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #000;
+        }
+        .hero {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-<header>
-  <img src="images/logo.png" alt="Heleen Vermeulen Creations Logo" width="150">
-</header>
 <body>
     <header>
+        <img src="images/logo.png" alt="Heleen Vermeulen Creations Logo">
         <h1>Heleen Vermeulen</h1>
         <p>Surface Designer</p>
         <nav>
@@ -20,9 +40,11 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+
     <main>
         <img src="https://via.placeholder.com/1000x400?text=Hero+Image+Placeholder" alt="Hero Placeholder" class="hero">
     </main>
+
     <footer>
         <p>&copy; 2025 Heleen Vermeulen Creations</p>
     </footer>
