--- a/index.html
+++ b/index.html
@@ -7,29 +7,24 @@
     <link rel="stylesheet" href="style.css">
     <style>
         header {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 15px; /* space between logo and text */
+            text-align: center;
             padding: 20px;
         }
         header img {
-            width: 100px; /* adjust logo size */
+            width: 150px; /* adjust logo size */
             height: auto;
-        }
-        header .site-title {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
+            display: block;
+            margin: 0 auto;
         }
         nav {
             text-align: center;
-            margin-top: 10px;
+            margin-bottom: 20px;
         }
         nav a {
             margin: 0 10px;
             text-decoration: none;
             color: #000;
+            font-weight: bold;
         }
         .hero {
             display: block;
@@ -42,10 +37,6 @@
 <body>
     <header>
         <img src="images/logo.png" alt="Heleen Vermeulen Creations Logo">
-        <div class="site-title">
-            <h1>Heleen Vermeulen</h1>
-            <p>Surface Designer</p>
-        </div>
     </header>
 
     <nav>
@@ -56,4 +47,11 @@
     </nav>
 
     <main>
-        <img src="https://via.placeholder.com/1000x400?text=Hero+Image+Pla
+        <img src="https://via.placeholder.com/1000x400?text=Hero+Image+Placeholder" alt="Hero Placeholder" class="hero">
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Heleen Vermeulen Creations</p>
+    </footer>
+</body>
+</html>
