--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <h2>About</h2>
-        <p>[Bio coming soon]</p>
+        <p>[Bio coming soon!]</p>
     </main>
 </body>
 </html>
