--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <main>
         <h2>About</h2>
         <p>[Bio coming soon!]</p>
-        <img src="heleenwebsitepic.jpg" alt="A Picture of art" width="500" height="auto">
+        <img src="Website/heleenwebsitepic.jpg" alt="A Picture of art" width="500" height="auto">
     </main>
 </body>
 </html>
