--- a/HeleenVermeulenCreations.github.io-main/about.html
+++ b/HeleenVermeulenCreations.github.io-main/about.html
@@ -18,6 +18,7 @@
     <main>
         <h2>About</h2>
         <p>[Bio coming soon]</p>
+        <img src="heleenwebsitepic.jpg" alt="Heleen's Picture"
     </main>
 </body>
 </html>
