--- a/heleenvermeulencreations_site/about.html
+++ b/heleenvermeulencreations_site/about.html
@@ -18,9 +18,7 @@
     <main>
         <h2>About</h2>
         <p>[Bio coming soon]</p>
-        <a href="https://www.pexels.com/photo/black-and-white-autumn-park-landscape-33956674/" target="_blank" rel="noopener noreferrer">
-  <img src="https://images.pexels.com/photos/33956674/pexels-photo-33956674.jpeg" alt="Black and White Autumn Park Landscape" width="600">
-</a>
+        <img src="heleenwebsitepic.jpg" alt="Heleen's Picture" width="400">
     </main>
 </body>
 </html>
