--- a/HeleenVermeulenCreations.github.io-main/about.html
+++ b/HeleenVermeulenCreations.github.io-main/about.html
@@ -17,10 +17,8 @@
     </header>
     <main>
         <h2>About</h2>
-        <p>[Bio coming soon]</p>
-        <a href="https://www.pexels.com/photo/black-and-white-autumn-park-landscape-33956674/" target="_blank" rel="noopener noreferrer">
-  <img src="https://images.pexels.com/photos/33956674/pexels-photo-33956674.jpeg" alt="Black and White Autumn Park Landscape" width="600">
-</a>
+        <p>[Bio coming soon!]</p>
+        
        
     </main>
 </body>
