--- a/heleenvermeulencreations_site/about.html
+++ b/heleenvermeulencreations_site/about.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <h2>About</h2>
-        <p>[Bio coming soon]</p>
+        <p>[Bio coming soon!!]</p>
         <img src="heleenwebsitepic.jpg" alt="Heleen's Picture" width="400">
     </main>
 </body>
