--- a/heleenvermeulencreations_site/about.html
+++ b/heleenvermeulencreations_site/about.html
@@ -18,7 +18,7 @@
     <main>
         <h2>About</h2>
         <p>[Bio coming soon!!]</p>
-        
+        <img src="images/heleenwebsitepic.jpg" alt="Heleen's Picture of nature" width="400">
     </main>
 </body>
 </html>
